# zamm-ui

./: .eslintrc.yaml  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierrc  Dockerfile  Makefile  README.md  package.json  tmux.sh  vite.config.ts
.github/workflows/: pre-commit.yaml  publish.yaml  test-e2e.yaml  test-python.yaml  test-rust.yaml  test-svelte.yaml  tests.yaml
src/: main.ts
src-python/: Makefile  pyproject.toml
src-python/api/sample-calls/: chat.yaml  chat_reply.yaml  greet.yaml  greet_empty.yaml  schema.json
src-python/api/schemas/: chat_method.json  greet_args.json  greet_response.json
src-python/sample-calls/: greet_response.json
src-python/sample-calls/alt/: greet_empty_response.json
src-python/sample-calls/canonical/: greet_response.json
src-python/tests/: __init__.py  test_greet.py
src-python/tests/api/: sample_call.py  test_chat.py  test_greet.py  test_helpers.py  test_openai_chat.yaml  test_openai_chat_reply.yaml
src-python/zamm/: __init__.py  execution.py  main.py
src-python/zamm/api/: __init__.py  chat.py  greet.py  methods.py  models.py
src-svelte/: .eslintrc.yaml  Makefile  package.json  styles.css  tailwind.config.ts  vite.config.ts  vitest.config.ts
src-svelte/.storybook/: main.ts  preview.ts
src-svelte/src/: app.d.ts  preferences.ts
src-svelte/src/lib/: Greet.svelte  InfoBox.stories.ts  InfoBox.svelte  InfoBox.test.ts  InfoBoxView.svelte  Slider.playwright.test.ts  Slider.stories.ts  Slider.svelte  Snackbar.svelte  SubInfoBox.svelte  Switch.playwright.test.ts  Switch.stories.ts  Switch.svelte  Switch.test.ts  animation-timing.ts  bindings.ts  firstPageLoad.ts  preferences.ts  sample-call-testing.ts  sample-call.ts  sound.ts  system-info.ts  test-helpers.ts
src-svelte/src/lib/__mocks__/: MockAppLayout.svelte  MockFullPageLayout.svelte  MockPageTransitions.svelte  MockTransitions.svelte  invoke.ts  stores.ts
src-svelte/src/lib/controls/: Button.svelte  TextInput.svelte
src-svelte/src/lib/snackbar/: Message.svelte  Snackbar.svelte
src-svelte/src/routes/: +layout.svelte  +layout.ts  +page.svelte  AnimationControl.svelte  ApiKeysDisplay.stories.ts  ApiKeysDisplay.svelte  ApiKeysDisplay.test.ts  AppLayout.stories.ts  AppLayout.svelte  AppLayout.test.ts  Background.stories.ts  Background.svelte  BackgroundUI.stories.ts  BackgroundUI.svelte  Dashboard.stories.ts  Dashboard.svelte  Header.svelte  Homepage.stories.ts  Homepage.svelte  Metadata.stories.ts  Metadata.svelte  PageTransition.stories.ts  PageTransition.svelte  PageTransition.test.ts  PageTransitionView.svelte  Sidebar.stories.ts  Sidebar.svelte  SidebarUI.stories.ts  SidebarUI.svelte  SidebarUI.test.ts  api_keys_display.stories.ts  api_keys_display.svelte  api_keys_display.test.ts  homepage.test.ts  storybook.test.ts  styles.css
src-svelte/src/routes/chat/: Chat.stories.ts  (+5 more)
src-tauri/: Cargo.toml  Makefile  clippy.sh  tauri.conf.json
src-tauri/api/sample-call-requests/: continue-conversation.json  start-conversation.json
src-tauri/api/sample-calls/: chat-continue-conversation.yaml  chat-start-conversation.yaml  get_api_keys-empty.json  get_api_keys-empty.yaml  get_api_keys-openai.json  get_api_keys-openai.yaml  get_preferences-animation-speed-override.yaml  get_preferences-animations-off.yaml  get_preferences-animations-override.yaml  get_preferences-extra-settings.yaml  get_preferences-no-file.yaml  get_preferences-sound-override.yaml  get_preferences-volume-override.yaml  get_system_info-linux.yaml  play_sound-switch.yaml  play_sound-whoosh.yaml  set_api_key-empty-filename.yaml  set_api_key-existing-no-newline.yaml  set_api_key-existing-with-newline.yaml  set_api_key-invalid-filename.yaml  set_api_key-no-disk-write.yaml  set_api_key-no-file.yaml  set_api_key-unset.yaml  set_preferences-sound-off.yaml  set_preferences-sound-on.yaml  set_preferences-volume-partial.yaml
src-tauri/api/sample-settings/extra-settings/: preferences.yaml  sound-on.yaml
src-tauri/api/sample-settings/sound-override/: preferences.yaml
src-tauri/api/sample-settings/volume-override/: preferences.toml
src-tauri/icons/: icon.icns
src-tauri/migrations/2023-08-17-054802_create_executions/: down.sql  up.sql
src-tauri/migrations/2024-01-13-023144_create_llm_calls/: up.sql
src-tauri/src/: commands.rs  main.rs  models.rs  python_api.rs  sample_call.rs  schema.rs  test_helpers.rs
src-tauri/src/commands/: api.rs  errors.rs  greet.rs  keys.rs  mod.rs  preferences.rs  sounds.rs  system.rs
src-tauri/src/commands/keys/: get.rs  mod.rs  set.rs
src-tauri/src/commands/llms/: chat.rs
src-tauri/src/commands/preferences/: mod.rs  models.rs  read.rs  write.rs
src-tauri/src/models/: llm_calls.rs  mod.rs
src-tauri/src/setup/: api_keys.rs  mod.rs
src/lib/: Greet.svelte  Greet.test.ts
src/routes/: +page.svelte  Counter.svelte  Header.svelte
src/routes/greet/: Greet.test.ts
src/types/: tauri-env.d.ts
webdriver/: .eslintrc.yaml  package.json  wdio.conf.ts
webdriver/test/specs/: e2e.test.js
(+22 files in other folders)
