[tool.poetry]
name = "zamm"
version = "0.0.0"
description = ""
authors = ["Amos Jun-yeung Ng <me@amos.ng>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
openai = "^1.6.1"
langchain = "^0.1.0"
langchain-openai = "^0.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
ruff = "^0.0.282"
mypy = "^1.4.1"
pre-commit = "^3.3.3"
pyinstaller = "^5.13.0"
types-pyyaml = "^6.0.12.11"
vcr-langchain = "^0.0.31"

[tool.ruff]
select = ["E", "F", "I", "D"]
ignore = ["D203", "D212"]
exclude = [
  "src-python/zamm/api/models.py",
  "src-python/tests/api/sample_call.py"
]
target-version = "py311"

[tool.mypy]
ignore_missing_imports = "True"
disallow_untyped_defs = "True"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    'ignore::pydantic.warnings.PydanticDeprecatedSince20',
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
