[package]
name = "zamm"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
# custom-protocol should always be enabled to enable end-to-end testing
tauri = { version = "1.4", features = [ "shell-sidecar", "shell-open", "process-command-api", "custom-protocol" ] }
diesel = { version = "2.1.0", features = ["sqlite", "uuid"] }
directories = "5.0.1"
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }

[features]
# this is necessary to prevent the Tauri CLI from complaining about the lack of a
# custom-protocol feature during compilation
custom-protocol = []
