[package]
name = "zamm"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "shell-sidecar", "shell-open", "process-command-api" ] }
diesel = { version = "2.1.0", features = ["sqlite", "uuid"] }
directories = "5.0.1"
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
specta = "1.0.5"
tauri-specta = { version = "1.0.2", features = ["javascript", "typescript"] }
futures = "0.3.28"
tauri-utils = "1.4.0"
thiserror = "1.0.47"
anyhow = "1.0.75"
mockall = "0.11.4"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
serde_yaml = "0.9.25"
temp-env = "0.3.4"
